--- a/configs/albert_config_large.json
+++ b/configs/albert_config_large.json
@@ -3,13 +3,13 @@
   "directionality": "bidi", 
   "hidden_act": "gelu", 
   "hidden_dropout_prob": 0.0,
-  "hidden_size": 768,
+  "hidden_size": 1024,
   "embedding_size": 128,
   "initializer_range": 0.02, 
-  "intermediate_size": 3072 ,
+  "intermediate_size": 4096,
   "max_position_embeddings": 512, 
-  "num_attention_heads": 12,
-  "num_hidden_layers": 12,
+  "num_attention_heads": 16,
+  "num_hidden_layers": 24,
 
   "pooler_fc_size": 768,
   "pooler_num_attention_heads": 12,
@@ -17,5 +17,7 @@
   "pooler_size_per_head": 128, 
   "pooler_type": "first_token_transform", 
   "type_vocab_size": 2, 
-  "vocab_size": 21128
+  "vocab_size": 21128,
+   "ln_type":"postln"
+
 }
